    - Set Uploaders to current debian-desktop members.
  * debian/control.in: removed

  [ Loic Minier ]
  * Drop uploaders rule and gnome-pkg-tools build-dep.
  * New desktop-background-bitmap alternative with only bitmap based
    backgrounds (PNG, JPEG, ...) for KDE 3 which doen't support SVG
    backgrounds; use the new background symlink as the default KDE wallpaper
    in kdesktoprc.

 -- Loic Minier <lool@dooz.org>  Mon,  4 Dec 2006 10:53:32 +0100

desktop-base (0.3.20) unstable; urgency=high

  [ Yves-Alexis Perez ]
  * Correct xfce4-session.rc file to add failsafe session so xfce4-session
    doesn't crash.

  [ Loic Minier ]
  * Upload; high urgency because the above changes are blocking another
    upload, even if the affected files are not useful yet.

 -- Loic Minier <lool@dooz.org>  Mon, 27 Nov 2006 12:16:05 +0100

desktop-base (0.3.19) unstable; urgency=low

  * Install configuration dirs for KDE and Xfce settings which will provide
    default values for the wallpaper, and splash screen; thanks Bart "cobaco"
    Cornelis; closes: #348702.

 -- Loic Minier <lool@dooz.org>  Fri, 17 Nov 2006 20:23:08 +0100

desktop-base (0.3.18) unstable; urgency=low

  [ Loic Minier ]
  * Add artworks by André Luiz Rodrigues Ferreira.
    - SVG background, backgrounds/debian-blueish-wallpaper.svg.
    - PNG splash, splash/gnome-splash-curves.png; closes: #288393.
  * Register these artworks as alternatives with the highest priority (40),
    and lower the other priorities.

  [ Josselin Mouette ]
  * Add a gconf-defaults file.
    + Set the default background, overriding the one in libgnome.
    + Set the default splash, overriding the one in gnome-session.
  * Register it with priority 15 (higher than standard Debian packages 
    but lower than CDDs).
  * Build-depend on debhelper 5.0.13.

 -- Josselin Mouette <joss@debian.org>  Tue, 10 Oct 2006 16:36:36 +0200

desktop-base (0.3.17) unstable; urgency=low

  [ Gustavo Franco ]